// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`semi.js 1`] = `
<div>foo</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
<div>foo</div>;

`;

exports[`semi.js 2`] = `
<div>foo</div>
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
;<div>foo</div>

`;

exports[`semi.md 1`] = `
\`\`\`jsx
<div>foo</div>
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
\`\`\`jsx
<div>foo</div>
\`\`\`;

`;

exports[`semi.md 2`] = `
\`\`\`jsx
<div>foo</div>
\`\`\`
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
;\`\`\`jsx
<div>foo</div>
\`\`\`

`;
